crates/franken-engine/tests/snapshots/benchmark_diagnostic_golden__benchmark_export_version.snap
---
source: tests/benchmark_diagnostic_golden.rs
expression: content
---
{
  "exit_code": 0,
  "stdout": "franken-benchmark-evidence-export 0.1.0\n",
  "stderr": "",
  "command": "franken-benchmark-evidence-export --version",
  "category": "benchmark"
}
