crates/franken-engine/tests/snapshots/benchmark_diagnostic_golden__runtime_diagnostics_help.snap
---
source: tests/benchmark_diagnostic_golden.rs
expression: content
---
{
  "exit_code": 0,
  "stdout": "runtime_diagnostics usage:\n  runtime_diagnostics diagnostics --input <path> [--summary]\n  runtime_diagnostics export-evidence --input <path> [--summary]\n      [--extension-id <id>] [--trace-id <id>] [--start-ns <u64>] [--end-ns <u64>]\n      [--severity info|warning|critical] [--decision-type <snake_case_decision_type>]\n  runtime_diagnostics support-bundle --input <path> [--summary] [--out-dir <path>]\n      [--extension-id <id>] [--trace-id <id>] [--start-ns <u64>] [--end-ns <u64>]\n      [--severity info|warning|critical] [--decision-type <snake_case_decision_type>]\n      [--redact-key <key_fragment>]...\n  runtime_diagnostics doctor --input <path> [--summary] [--out-dir <path>]\n      [--extension-id <id>] [--trace-id <id>] [--start-ns <u64>] [--end-ns <u64>]\n      [--severity info|warning|critical] [--decision-type <snake_case_decision_type>]\n      [--redact-key <key_fragment>]...\n  runtime_diagnostics compatibility-advisories --scenario-report <path> [--summary]\n      [--source-report <path_or_url>] [--out <path>]\n  runtime_diagnostics onboarding-scorecard --input <path> [--summary] [--out-dir <path>]\n      [--workload-id <id>] [--package-name <name>] [--[TARGET_PATH] <value>]...\n      [--signals <signals_json_path>]\n  runtime_diagnostics rollout-decision-artifact --input <path> [--summary] [--out-dir <path>]\n      [--workload-id <id>] [--package-name <name>] [--[TARGET_PATH] <value>]...\n      [--signals <signals_json_path>] [--advisories <signals_json_path>] [--platform-signals <signals_json_path>]\n      [--extension-id <id>] [--trace-id <id>] [--start-ns <u64>] [--end-ns <u64>]\n      [--severity info|warning|critical] [--decision-type <snake_case_decision_type>]\n      [--redact-key <key_fragment>]...\n  runtime_diagnostics ga-evidence-package --input <path> [--summary] [--out-dir <path>]\n      --release-candidate <id> [--workload-id <id>] [--package-name <name>] [--[TARGET_PATH] <value>]...\n      [--signals <signals_json_path>] [--advisories <signals_json_path>] [--platform-signals <signals_json_path>]\n      [--conformance-artifact <path>[::description]]...\n      [--performance-artifact <path>[::description]]...\n      [--security-artifact <path>[::description]]...\n      [--third-party-replay-command <command>]...\n      [--extension-id <id>] [--trace-id <id>] [--start-ns <u64>] [--end-ns <u64>]\n      [--severity info|warning|critical] [--decision-type <snake_case_decision_type>]\n      [--redact-key <key_fragment>]...\n",
  "stderr": "",
  "command": "runtime_diagnostics help",
  "category": "diagnostic"
}
