crates/franken-engine/tests/snapshots/benchmark_diagnostic_golden__runtime_diagnostics_no_input.snap
---
source: tests/benchmark_diagnostic_golden.rs
expression: content
---
{
  "exit_code": 2,
  "stdout": "",
  "stderr": "missing required --input <path>\n",
  "command": "runtime_diagnostics diagnostics",
  "category": "diagnostic"
}
